--- a/templates/chat.html
+++ b/templates/chat.html
@@ -12,7 +12,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Premium Chat App</a>
+        <a class="navbar-brand" href="#">Chat App</a>
         <div class="d-flex align-items-center">
           <span class="navbar-text me-3">
             Logged in as: <strong>{{.Username}}</strong>
